[package]
authors = ["Augustus Mayo <gusmayo@gmail.com>"]
name = "micro_sf_client"
version = "0.1.0"

[[bin]]
doc = true
name = "sf_cli"
path = "src/cli/main.rs"
required-features = ["cli"]
test = true

[dependencies]
reqwest = "0.6.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"

[dependencies.structopt]
optional = true
version = "0.0.3"

[dependencies.structopt-derive]
optional = true
version = "0.0.3"

[dependencies.toml]
optional = true
version = "0.4"

[dev-dependencies]
mockito = { git = "https://github.com/lipanski/mockito.git", rev = "ccf838d45a3bc8e9b09fc88a69de790a50bab035" }

[features]
cli = ["structopt", "structopt-derive", "toml"]